fix firewall deps

--- a/playbooks/roles/setup_common/tasks/firewall.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Install or update base software
+  ansible.builtin.apt:
+    name:
+      - conntrack
+      - iptables
+
 - name: Check if a dedicate DDoS solution is in place
   changed_when: false
   ansible.builtin.stat:
