--- a/playbooks/roles/setup_tor/tasks/tor-dist.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-dist.yaml
@@ -2,12 +2,13 @@
 - name: Enable Tor Debian repository
   when: ansible_facts.distribution in ('Debian', 'Ubuntu')
   block:
-    - name: Install or update Release key
+    - name: Install or update GnuPG
       ansible.builtin.apt:
         name:
-          - deb.torproject.org-keyring
+          - gpg
+          - gpg-agent
 
-    - name: Get Tor repository apt key
+    - name: Get Torproject apt key
       ansible.builtin.apt_key:
         url: https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc
         state: present
@@ -25,7 +26,7 @@
         repo: "deb https://deb.torproject.org/torproject.org {{ tor_debian_target }} main"
         state: present
 
-    - name: Install or update Tor + obfs4proxy
+    - name: Install or update Tor + PT
       ansible.builtin.apt:
         default_release: "{{ tor_debian_target | default(ansible_facts.distribution_release) }}"
         name:
