--- a/playbooks/roles/setup_tor/tasks/tools-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tools-src.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Install or update toolchain for Tor build
+- name: Install/Update toolchain for Tor build
   when: ansible_facts.distribution in ('Debian', 'Ubuntu')
   ansible.builtin.apt:
     name:
@@ -11,13 +11,13 @@
       - logrotate
       - zlib1g-dev
 
-- name: Install or update toolchain for Tor build
+- name: Install/Update toolchain for Tor build (Ubuntu)
   when: ansible_facts.distribution in ('Ubuntu')
   ansible.builtin.apt:
     name:
       - autotools-dev
 
-- name: Install or update Go for Tor proxy build
+- name: Install/Update Go for Tor proxy build
   ansible.builtin.apt:
     default_release: "{{ ansible_facts.distribution_release }}-backports"
     name:
