--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -56,16 +56,8 @@
     state: absent
   notify: "Reload nginx"
 
-- name: Handle nginx default configuration
-  when: nginx_listener_default
+- name: Confgure nginx
   ansible.builtin.template:
-    src: nginx_default.conf.j2
-    dest: /etc/nginx/conf.d/default.conf
-  notify: "Reload nginx"
-
-- name: Handle nginx metrics configuration
-  when: metrics_port
-  ansible.builtin.template:
-    src: nginx_metrics.conf.j2
-    dest: /etc/nginx/conf.d/metrics.conf
+    src: nginx.conf.j2
+    dest: /etc/nginx/conf.d/tor-relays.conf
   notify: "Reload nginx"
