--- a/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/auto-update.yaml
@@ -18,7 +18,7 @@
   with_items:
     - 20auto-upgrades
     - 50unattended-upgrades
-  notify: "Reload Systemd"
+  notify: Reload Systemd
 
 - name: Create timer.d directories
   ansible.builtin.file:
@@ -34,14 +34,14 @@
   ansible.builtin.template:
     src: apt_timer.j2
     dest: /etc/systemd/system/apt-daily.timer.d/override.conf
-  notify: "Reload Systemd"
+  notify: Reload Systemd
 
 # 2x per day at :10
 - name: Configure apt upgrade timer
   ansible.builtin.template:
     src: apt_upgrade.j2
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
-  notify: "Reload Systemd"
+  notify: Reload Systemd
 
 # 2x per day one hour later at :13
 - name: Ensure reaper cron job is present
