--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,7 +9,6 @@ strategy = ansible.builtin.free
 
 gathering = smart
 inject_facts_as_vars = false
-# text can be easily parsed
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
@@ -20,8 +19,8 @@ ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=on -o Co
 # reduce noise
 display_skipped_hosts = false
 
-# timer stats (for debug/profiling)
+# timer stats for debug/profiling
 # callbacks_enabled=ansible.posix.profile_tasks
 
-# clashes with any attempt to grep the syslog
+# clashes with tasks grep'ing the syslog
 no_target_syslog = true
