--- a/playbooks/roles/setup_common/tasks/custom-command.yaml
+++ b/playbooks/roles/setup_common/tasks/custom-command.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Run a custom command
-  changed_when: true
+  changed_when: false
   failed_when: false
   ansible.builtin.shell:
     cmd: "{{ custom_command }}"
