--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -69,15 +69,13 @@
     path: /etc/systemd/system/logrotate.timer.d/
     state: directory
     mode: "0755"
-  notify:
-    - "Reload Systemd"
+  notify: Reload Systemd
 
 - name: Add logrotate systemd override config
   ansible.builtin.template:
     src: logrotate.override.conf.j2
     dest: /etc/systemd/system/logrotate.timer.d/override.conf
-  notify:
-    - "Reload Systemd"
+  notify: Reload Systemd
 
 # e.g. Tor refuses to start, if IPv6 ORPort is not up
 - name: Ensure that Networkd wait online systemd override dir exists
@@ -91,4 +89,4 @@
     src: networkd-wait-online.override.conf.j2
     dest: /etc/systemd/system/systemd-networkd-wait-online.service.d/override.conf
   notify:
-    - "Reload Systemd"
+    - Reload Systemd
