--- a/playbooks/roles/setup_snowflake/tasks/config.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/config.yaml
@@ -5,7 +5,7 @@
     value: "2" # 1 is too low: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/issues/40287
     sysctl_file: /etc/sysctl.d/21tor-snowflake.conf
     sysctl_set: true
-  notify: "Restart Snowflake"
+  notify: Restart Snowflake
 
 - name: Sync Geoip DB
   throttle: "{{ concurrent_local_jobs }}"
@@ -15,4 +15,4 @@
     dest: /usr/share/tor/
     owner: false
     group: false
-  notify: "Restart Snowflake"
+  notify: Restart Snowflake
