--- a/playbooks/roles/setup_common/tasks/kernel-dist.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-dist.yaml
@@ -11,7 +11,7 @@
         default_release: "{{ ansible_facts.distribution_release }}{{ kernel_debian_backports | ternary('-backports', '') }}"
         name:
           - "linux-image{{ _kernel_cloud }}-{{ _kernel_arch }}"
-      notify: "Reboot system"
+      notify: Reboot system
 
     - name: Remove non-Cloud Debian kernel
       when: kernel_debian_cloud
