--- a/playbooks/roles/setup_common/tasks/node-exporter.yaml
+++ b/playbooks/roles/setup_common/tasks/node-exporter.yaml
@@ -3,14 +3,14 @@
   ansible.builtin.apt:
     name:
       - prometheus-node-exporter
-  notify: "Restart Prometheus node exporter"
+  notify: Restart Prometheus node exporter
 
 - name: Create Prometheus node exporter data directory
   ansible.builtin.file:
     path: /var/lib/node_exporter/
     state: directory
     mode: "0755"
-  notify: "Restart Prometheus node exporter"
+  notify: Restart Prometheus node exporter
 
 - name: Configure Prometheus node exporter
   ansible.builtin.lineinfile:
@@ -24,7 +24,7 @@
       '
     path: /etc/default/prometheus-node-exporter
     regex: "^ARGS="
-  notify: "Restart Prometheus node exporter"
+  notify: Restart Prometheus node exporter
 
 - name: Enable Prometheus node exporter at boot
   ansible.builtin.systemd_service:
