--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -1,11 +1,11 @@
 ---
 - name: Reload Systemd
-  listen: "Reload Systemd"
+  listen: Reload Systemd
   ansible.builtin.systemd_service:
     daemon_reload: true
 
 - name: Restart Snowflake
-  listen: "Restart Snowflake"
+  listen: Restart Snowflake
   ansible.builtin.systemd_service:
     name: snowflake-proxy
     state: restarted
