--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -56,13 +56,13 @@
     dest: /usr/bin/snowflake-proxy
     mode: a+x
     remote_src: true
-  notify: "Restart Snowflake"
+  notify: Restart Snowflake
 
 - name: Add systemd unit
   ansible.builtin.template:
     src: snowflake-proxy.service.j2
     dest: /etc/systemd/system/snowflake-proxy.service
-  notify: "Restart Snowflake"
+  notify: Restart Snowflake
 
 - name: Create cron job to restart service in case that systemd refused to do it
   ansible.builtin.cron:
