--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -93,13 +93,13 @@
     - name: Enable Tor
       ansible.builtin.systemd_service:
         name: tor
-      notify: "Restart Tor"
+      notify: Restart Tor
 
     - name: Force restart of Tor
       changed_when: true
       ansible.builtin.systemd_service:
         name: tor
-      notify: "Restart Tor"
+      notify: Restart Tor
       tags:
         - never
         - force-restart
