--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -92,7 +92,7 @@
     remote_src: true
     mode: a+x
   register: _binary_tor
-  notify: "Restart Tor"
+  notify: Restart Tor
 
 - name: Run install command
   when: _binary_tor.changed
@@ -105,7 +105,7 @@
   ansible.builtin.template:
     src: tor.service.j2
     dest: /etc/systemd/system/tor.service
-  notify: "Restart Tor"
+  notify: Restart Tor
 
 - name: Set sysctl max user namespaces
   ansible.posix.sysctl:
@@ -113,7 +113,7 @@
     value: "2" # debian bookworm default: 14886
     sysctl_file: /etc/sysctl.d/21tor-relay.conf
     sysctl_set: true
-  notify: "Restart Tor"
+  notify: Restart Tor
 
 - name: Allow low port
   changed_when: false
