--- a/playbooks/roles/info_setup/tasks/main.yaml
+++ b/playbooks/roles/info_setup/tasks/main.yaml
@@ -15,3 +15,8 @@
       ansible.builtin.import_tasks: metrics.yaml
       tags:
         - metrics
+
+    - name: Uname
+      ansible.builtin.import_tasks: uname.yaml
+      tags:
+        - uname
