--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,7 +14,7 @@ fact_caching_connection = ./.ansible_facts
 
 remote_user = root
 
-ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
+ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
 # reduce noise
 display_skipped_hosts = false
@@ -22,5 +22,5 @@ display_skipped_hosts = false
 # timer stats for debug/profiling
 # callbacks_enabled=ansible.posix.profile_tasks
 
-# clashes with tasks grep'ing the syslog
+# clashes with tasks grep'ing directly the target syslog
 no_target_syslog = true
